--- a/wild-blue-yonder-website/src/components/HeroImage/hero-image.css
+++ b/wild-blue-yonder-website/src/components/HeroImage/hero-image.css
@@ -2,6 +2,9 @@
   width: 100%;
   height: 200px;
   overflow: hidden;
+  border-style: solid;
+  border-width: 3px 0px;
+  border-color: var(--darkest-blue);
 }
 
 .image-container img {
