--- a/wild-blue-yonder-website/src/components/UpcomingShows/upcoming-shows.css
+++ b/wild-blue-yonder-website/src/components/UpcomingShows/upcoming-shows.css
@@ -1,6 +1,6 @@
 .upcoming-shows-header {
   text-align: center;
-  padding: 8px;
+  padding-bottom: 28px;
 }
 
 .shows-container {
